--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,41 @@
+version: '3'
+name: "scamazon"
 
+networks:
+  my_network:
+    driver: bridge
+
+services:
+
+  produkt-catalog-service:
+    build: ./backend
+    networks:
+      - my_network
+
+  prometheus-produkt-catalog-service:
+    image: prom/prometheus:latest
+    ports:
+      - "9094:9090"
+    networks:
+      - my_network
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+  mongo-produkt-catalog-service:
+    image: mongo
+    restart: always
+    volumes:
+      - ./data-vol:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express-produkt-catalog-service:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8084:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017//#
