--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - my_network
     volumes:
       - ./mongo-data:/data/db
-      - ./init/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      # - ./init/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     healthcheck:
       test: echo 'mongo.runCommand("ping").ok' | mongosh mongo:27017 --quiet
       interval: 5s
