--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
 FROM python
-RUN pip install flask requests prometheus-flask-exporter Flask-PyMongo
+RUN pip install flask requests prometheus-flask-exporter pymongo
 COPY ./app.py /app.py
 CMD ["python", "app.py"]
