--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     build: ./backend
     networks:
       - my_network
-    # ports:
-    #   - "4005:4005"
+    ports:
+      - "4005:4005"
     depends_on:
       mongo:
         condition: service_healthy
