--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Docker Publish
 on:
   push:
     branches:
-      - 10-test-github-action-building-docker-image-and-publish
+      - main # Adjust this branch name as needed
 
 jobs:
   build-and-publish:
@@ -16,6 +16,12 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and tag Docker Compose Service
-        run: docker-compose -f docker-compose.yml build
-          docker-compose -f docker-compose.yml push
+      - name: Build and tag Docker image
+        run: |
+          docker build -t passwordnotsafe/produkt-catalog-service:latest .
+          docker tag passwordnotsafe/produkt-catalog-service:latest passwordnotsafe/produkt-catalog-service:$(date +"%Y%m%d%H%M%S")
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push passwordnotsafe/produkt-catalog-service:latest
+          docker push passwordnotsafe/produkt-catalog-service:$(date +"%Y%m%d%H%M%S")
