--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - users: actions/checkout@2
+      - uses: actions/checkout@2
       - name: docker login
         env:
           DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
