--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag passwordnotsafe/product-servce:1.0.0
+        run: docker build . --file .b/backend/Dockerfile --tag passwordnotsafe/product-servce:1.0.0
 
       - name: Docker Push
         run: docker push ${{secrets.DOCKER_USERNAME}}/produkt-catalog-service
