--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ volumes:
 
 services:
   user-management-service:
-    build: ./backend
+    # build: ./backend
+    image: passwordnotsafe/produkt-catalog-service
     networks:
       - my_network
     ports:
