--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,10 +18,10 @@ jobs:
           DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          docker login -u $secrets.DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - name: Build the Docker image
         run: docker build  -t passwordnotsafe/product-service:1.0.0 ./backend
 
       - name: Docker Push
-        run: docker push $DOCKER_USER/product-service:1.0.0
+        run: docker push $secrets.DOCKER_USERNAME/product-service:1.0.0
