--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,15 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Docker Login
+      - name: docker login
         env:
           DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
         run: |
-          docker login -u $secrets.DOCKER_USERNAME -p $DOCKER_PASSWORD
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
       - name: Build the Docker image
         run: docker build  -t passwordnotsafe/product-service:1.0.0 ./backend
 
       - name: Docker Push
-        run: docker push $secrets.DOCKER_USERNAME/product-service:1.0.0
+        run: docker push ${{secrets.DOCKER_USERNAME}}/produkt-catalog-service
