--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,31 +1,3 @@
-# name: Docker Image CI
-
-# on:
-#   push:
-#     branches:
-#       - 10-test-github-action-building-docker-image-and-publish
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-
-#       - name: docker login
-#         env:
-#           DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
-#           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
-#         run: |
-#           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-
-#       - name: Build the Docker image
-#         run: docker build  -t passwordnotsafe/pcs:1.0.0 ./backend
-
-#       - name: Docker Push
-#         run: docker push ${{secrets.DOCKER_USERNAME}}/produkt-catalog-service
-
 name: Docker Image CI
 
 on:
@@ -41,15 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Docker Login
+      - name: docker login
         env:
           DOCKER_USER: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD}}
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
       - name: Build the Docker image
-        run: docker build . -f /backend -t passwordnotsafe/product-service:1.0.0
+        run: docker build --file ./backend --tag passwordnotsafe/produkt-catalog-service:1.0.0
 
       - name: Docker Push
-        run: docker push $DOCKER_USER/product-service:1.0.0
+        run: docker push ${{secrets.DOCKER_USERNAME}}/produkt-catalog-service
