when pr to main run

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - 10-test-github-action-building-docker-image-and-publish
+      - main
 
 jobs:
   build:
