adding enviroment for the port for the backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     depends_on:
       mongo:
         condition: service_healthy
+    environment:
+      - DB_PORT=4005
 
   mongo:
     image: mongo
