--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,23 +17,23 @@ services:
     ports:
       - "4005:4005"
     depends_on:
-      mongo:
+      mongo-product-catalog-service:
         condition: service_healthy
     environment:
       - DB_PORT=4005
       - DB_USERNAME=root
       - DB_PASSWORD=example
 
-  mongo:
+  mongo-product-catalog-service:
     image: mongo
     restart: always
     networks:
       - my_network
     volumes:
       - ./mongo-data:/data/db
-      - ./init/init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+      - ./init/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     healthcheck:
-      test: echo 'mongo.runCommand("ping").ok' | mongosh mongo:27017 --quiet
+      test: echo 'mongo-product-catalog-service.runCommand("ping").ok' | mongosh mongo-product-catalog-service:27017 --quiet
       interval: 5s
       timeout: 5s
       retries: 20
@@ -51,7 +51,7 @@ services:
     networks:
       - my_network
     depends_on:
-      mongo:
+      mongo-product-catalog-service:
         condition: service_healthy
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
