--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - DB_PORT=4005
       - DB_USERNAME=root
       - DB_PASSWORD=example
+      - DB_HOST=mongo-product-catalog-service
 
   mongo-product-catalog-service:
     image: mongo
