change to a smaller python image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python
+FROM python:3.9-slim
 RUN pip install flask requests prometheus-flask-exporter pymongo
 COPY ./app.py /app.py
 CMD ["python", "app.py"]
