--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,20 +45,20 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
       MONGO_INITDB_DATABASE: allProducts
 
-  mongo-express-product-catalog-service:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8084:8081
-    networks:
-      - my_network
-    depends_on:
-      mongo-product-catalog-service:
-        condition: service_healthy
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo-product-catalog-service:27017/
+  # mongo-express-product-catalog-service:
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - 8084:8081
+  #   networks:
+  #     - my_network
+  #   depends_on:
+  #     mongo-product-catalog-service:
+  #       condition: service_healthy
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
+  #     ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo-product-catalog-service:27017/
 
   # minio:
   #   image: quay.io/minio/minio:RELEASE.2022-02-18T01-50-10Z
