on build add sha hash for images

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,8 @@ name: Docker Build and Push
 
 on:
   push:
-    branches: ["*"]
+    branches:
+      - 11-environment-paramates-to-backend-file
   pull_request:
     branches:
       - main
@@ -24,8 +25,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t passwordnotsafe/produkt-catalog-service:master ./backend
+          docker build -t passwordnotsafe/produkt-catalog-service:${{ github.sha }} ./backend
 
       - name: Push Docker Image
         run: |
-          docker push passwordnotsafe/produkt-catalog-service:master
+          docker push passwordnotsafe/produkt-catalog-service:${{ github.sha }}
