--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -25,8 +25,10 @@ jobs:
 
       - name: Build Docker Image
         run: |
+          docker build -t passwordnotsafe/produkt-catalog-service ./backend
           docker build -t passwordnotsafe/produkt-catalog-service:${{ github.sha }} ./backend
 
       - name: Push Docker Image
         run: |
+          docker push passwordnotsafe/produkt-catalog-service
           docker push passwordnotsafe/produkt-catalog-service:${{ github.sha }}
