fixing the trigger to a build job

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - 11-environment-paramates-to-backend-file
+      - main
   pull_request:
     branches:
       - main
+
+permissions:
+  issues: write
 
 jobs:
   build:
@@ -32,3 +36,16 @@ jobs:
         run: |
           docker push passwordnotsafe/produkt-catalog-service
           docker push passwordnotsafe/produkt-catalog-service:${{ github.sha }}
+      
+      - name: Sleep for 30 seconds
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '15s' 
+
+      - name: Trigger fetch new sha update to k8 deployment file.
+        run: |
+          curl --request POST \
+            --url 'https://api.github.com/repos/DevOps22-Grupp1/scamazon/actions/workflows/product-update-sha.yml/dispatches' \
+            -H "Accept: application/vnd.github+json" \
+            -H 'Authorization: Bearer ${{secrets.TOKEN}}' \
+            -d '{"ref":"main"}'
