add push new test images and test the image with cypress tests

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,9 +16,45 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      
+      - name: Docker Login
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+
+      - name: Build Docker Image
+        run: |
+          docker build -t passwordnotsafe/test-cypress:produkt-catalog-service ./backend
+
+      - name: Push Docker Image
+        run: |
+          docker push passwordnotsafe/test-cypress:produkt-catalog-service
+      
+      - name: Wait for completion
+        run: |
+           $(curl -s -X POST \
+              --url 'https://api.github.com/repos/DevOps22-Grupp1/test/actions/workflows/run.test.yml/dispatches' \
+              -H "Accept: application/vnd.github.v3+json" \
+              -H "Authorization: Bearer ${{secrets.TOKEN}}" \
+              -d '{"ref":"main"}') 
+          
+            STATUS="in_progress"
+            while [ "$STATUS" != "success" ]; do
+              sleep 10
+              RESPONSE=$(curl https://api.github.com/repos/DevOps22-Grupp1/test/actions/runs)
+              STATUS=$(echo $RESPONSE | jq -r '.workflow_runs[0].conclusion')
+              if [ "$STATUS" = "failure" ]; then
+              exit 1
+            fi
+            done
+
 
       - name: Docker Login
         env:
